--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,6 @@ version: 0.2
 phases:
   build:
     commands:
-      - curl -k -u $FITOXSUID:$FITOXSTOKEN --request POST -H "Content-Type:application/json" -d '{"pit":"310","targetid":"SO4QtrYoP9YHIjhBDMqv1619129404","ci":"awscodestar","tipo":"3"}' https://fitoxs.com/ScanTarget/
+      - curl -k -u $FITOXSUID:$FITOXSTOKEN --request POST -H "Content-Type:application/json" -d '{"pit":"310","targetid":"tBfO6QkSfg5hZNDg50jG1619129611","ci":"Circle CI","tipo":"6"}' https://fitoxs.com/ScanTarget/
 
      
