--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,4 +3,5 @@ version: 0.2
 phases:
   build:
     commands:
-      - 
+      - curl -k -u $FITOXSUID:$FITOXSTOKEN --request POST -H "Content-Type:application/json" -d '{"pit":"310","targetid":"oaHWbCLDaSr0iKjoITCE1619194497","ci":"awscodestar","tipo":"3"}' https://fitoxs.com/ScanTarget/
+ 
